# prefectn8n

./: .gitignore  README.md  local.yml  main.py  pyproject.toml
prefectn8n/: main.py
prefectn8n/pipelines/: preprocess.py
prefectn8n/tasks/: common.py  main.py  mods.py  train.py  wrangle.py
prefectn8n/utils/: tools.py
respository/tasks/: read.py
sample_data/: iris.csv
