[project]
name = "prefectn8n"
version = "0.1.0"
description = ""
authors = [
    {name = "jamestq",email = "james.quang@pm.me"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
prefect = ">=3.4.15,<4.0.0"
pandas = ">=2.3.2,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
prefectn8n = "prefectn8n.main:app"